# system-monitoring-center

./: .gitignore  Changes.md  LICENSE  MANIFEST.in  PKGBUILD  README.md  com.github.hakand34.system-monitoring-center.appdata.xml  com.github.hakand34.system-monitoring-center.yml  io.github.hakandundar34coding.system-monitoring-center.appdata.xml  io.github.hakandundar34coding.system-monitoring-center.yml  meson.build  pyproject.toml  rpm_build.sh  setup.py  system-monitoring-center.spec  system-monitoring-center_0.1.0-beta_amd64.deb  system-monitoring-center_0.1.1-beta_amd64.deb  system-monitoring-center_0.1.10-beta_amd64.deb  system-monitoring-center_0.1.11-beta_amd64.deb  system-monitoring-center_0.1.13-beta_amd64.deb  system-monitoring-center_0.1.14-beta_amd64.deb  system-monitoring-center_0.1.15-beta_amd64.deb  system-monitoring-center_0.1.17-beta_amd64.deb  system-monitoring-center_0.1.18-beta_amd64.deb  system-monitoring-center_0.1.19-beta_amd64.deb  system-monitoring-center_0.1.2-beta_amd64.deb  system-monitoring-center_0.1.3-beta_amd64.deb  system-monitoring-center_0.1.4-beta_amd64.deb  system-monitoring-center_0.1.5-beta_amd64.deb  system-monitoring-center_0.1.6-beta_amd64.deb  system-monitoring-center_0.1.7-beta_amd64.deb  system-monitoring-center_0.1.8-beta_amd64.deb  system-monitoring-center_0.1.9-beta_amd64.deb  tr.org.pardus.system-monitoring-center.appdata.xml  tr.org.pardus.system-monitoring-center.yml
DEBIAN/: control
Docs/: Data_unit_conversion.ods  Known_Issues  Performance_tab_chart_plots_drawing_area_explanation.odg
data/: generate_man_gz.sh  io.github.hakandundar34coding.system-monitoring-center.appdata.xml.in  io.github.hakandundar34coding.system-monitoring-center.desktop.in  meson.build
data/database/: database_license.txt  meson.build
data/icons/: meson.build
database/: arm.ids  database_license.txt  sdcard.ids  sdio.ids
debian/: changelog  changelog.save  changelog.save.1  changelog.save.2  control  copyright  debhelper-build-stamp  files  rules  system-monitoring-center.lintian-overrides  system-monitoring-center.postinst.debhelper  system-monitoring-center.prerm.debhelper  system-monitoring-center.substvars
doc/changelog/: changelog
docs/: Notes_About_Pardus_And_Pypi_Images.txt  Notes_About_Pardus_Image.txt  dependencies.md  flatpak.md  known_issues.md  notes_for_translators.md  pypi.md  translations.md  uninstall_pypi_package.md
flatpak/: io.github.hakandundar34coding.system-monitoring-center.yml  pypi-dependencies.json  python3-Pillow.json  requirements.txt  tkinner.json  tkinter-build.patch  tkinter.json
integration/: com.github.hakand34.system-monitoring-center.desktop  com.github.hakand34.system-monitoring-center.policy  io.github.hakandundar34coding.system-monitoring-center.desktop  io.github.hakandundar34coding.system-monitoring-center.policy  system-monitoring-center  tr.org.pardus.pkexec.system-monitoring-center.policy  tr.org.pardus.system-monitoring-center.desktop
locale/: get_text_from_py_and_glade.sh  system-monitoring-center.pot
locale/cs/: system-monitoring-center.mo  system-monitoring-center.po
locale/pl/: system-monitoring-center.po
locale/tr/: system-monitoring-center.mo  system-monitoring-center.po
locale/tr_locale/: system-monitoring-center.mo  system-monitoring-center.po
man/: system-monitoring-center.1
packaging/: control  generate_deb_package.sh  system-monitoring-center_0.1.12-beta_amd64.deb  system-monitoring-center_0.1.16-beta_amd64.deb
packaging_scripts/: README.txt  arch_linux_packaging.sh  debian_packaging.sh  flatpak_packaging.sh  flatpak_packaging_(not_working).sh  flatpak_packaging_has_problems.sh  python_package.sh  rpm_packaging.sh
po/: LINGUAS  POTFILES  POTFILES.in  command_compile_all.py  command_get_text.py  command_get_text_from_py.sh  cs.po  de.po  es.mo  es.po  fa.po  fr.po  hu.po  meson.build  pl.po  pt_BR.po  pt_PT.po  ru_RU.po  system-monitoring-center.pot  tr.po  zh_CN.po  zh_TW.mo  zh_TW.po
src/: ChartPlots.py  Common.py  Config.py  Cpu.py  CpuMenu.py  CpuMenusGUI.py  Disk.py  DiskDetails.py  DiskGUI.py  DiskMenu.py  DiskMenusGUI.py  EnvironmentVarMenuCustomizations.py  EnvironmentVarMenuCustomizationsGUI.py  EnvironmentVarMenuRightClick.py  EnvironmentVarMenuRightClickGUI.py  EnvironmentVariables.py  EnvironmentVariablesDeleteForAllUsers.py  EnvironmentVariablesGUI.py  EnvironmentVariablesInput.py  EnvironmentVariablesInputGUI.py  EnvironmentVariablesMenusGUI.py  FloatingSummary.py  Gpu.py  GpuGUI.py  GpuMenu.py  GpuMenusGUI.py  Libsysmon.py  Main.py  MainGUI (kopya).py  MainGUI.py  MainMenusDialogs.py  MainMenusDialogsGUI.py  MainWindow.py  Memory.py  MemoryMenu.py  MemoryRamHardware.py  MemorySwapDetails.py  Network.py  NetworkGUI.py  NetworkMenu.py  (+87 more)
systemmonitoringcenter/: start.py
translations/: get_text_from_py_and_glade.sh  system-monitoring-center.pot
translations/cs/: system-monitoring-center.po
translations/pl/: system-monitoring-center.mo  system-monitoring-center.po
translations/pt_BR/: system-monitoring-center.mo  system-monitoring-center.po
translations/ru/: system-monitoring-center.mo  (+1 more)
ui/: #MainWindow.ui#  #UsersMenuCustomizations.ui#  CpuMenus.ui  CpuTab.ui  CpuTab.ui~  DiskDetailsWindow.ui  DiskMenus.ui  DiskTab.ui  EnvironmentVarMenuCustomizations.ui  EnvironmentVarMenuRightClick.ui  EnvironmentVariablesInputWindow.ui  EnvironmentVariablesMenus.glade  EnvironmentVariablesMenus.ui  EnvironmentVariablesTab.ui  FloatingSummaryWindow.ui  GpuMenus.ui  GpuTab.ui  MainMenusDialogs.ui  MainWindow.glade  MainWindow.ui  MainWindow.ui~  MemoryMenus.ui  MemoryRamHardwareWindow.ui  MemorySwapDetailsWindow.ui  MemoryTab.ui  NetworkMenus.ui  NetworkTab.ui  PerformanceMenus.ui  PerformanceSummaryHeaderBarGrid.ui  PerformanceSummaryHeaderBarGrid.ui~  PerformanceSummaryHeaderBarGrid2.ui  ProcessesCustomPriorityWindow.glade  ProcessesCustomPriorityWindow.ui  ProcessesDetailsWindow.glade  ProcessesDetailsWindow.ui  ProcessesDetailsWindow.ui~  ProcessesMenuCustomizations.ui  ProcessesMenuRightClick.ui  ProcessesMenus.glade  ProcessesMenus.ui  (+40 more)
(+226 files in other folders)
