pkgdatadir = join_paths(get_option('prefix'), get_option('datadir'), meson.project_name())

application_id = 'io.github.hakandundar34coding.system-monitoring-center'

scalable_apps_dir = join_paths('hicolor', 'scalable', 'apps')
install_data([
    'hicolor/scalable/apps/io.github.hakandundar34coding.system-monitoring-center.svg',
    ],
    install_dir: join_paths(get_option('datadir'), 'icons', scalable_apps_dir)
)

scalable_apps_theme_dir = join_paths('hicolor', 'scalable', 'apps')
install_data([
    'hicolor/scalable/apps/system-monitoring-center.svg',
    ],
    install_dir: join_paths(pkgdatadir, 'icons', scalable_apps_theme_dir)
)

scalable_actions_theme_dir = join_paths('hicolor', 'scalable', 'actions')
install_data([
    'hicolor/scalable/actions/system-monitoring-center-cpu-symbolic.svg',
    'hicolor/scalable/actions/system-monitoring-center-disk-hdd-symbolic.svg',
    'hicolor/scalable/actions/system-monitoring-center-fan-symbolic.svg',
    'hicolor/scalable/actions/system-monitoring-center-graphics-card-symbolic.svg',
    'hicolor/scalable/actions/system-monitoring-center-network-symbolic.svg',
    'hicolor/scalable/actions/system-monitoring-center-performance-symbolic.svg',
    'hicolor/scalable/actions/system-monitoring-center-performance-symbolic.svg',
    'hicolor/scalable/actions/system-monitoring-center-process-symbolic.svg',
    'hicolor/scalable/actions/system-monitoring-center-ram-symbolic.svg',
    'hicolor/scalable/actions/system-monitoring-center-services-symbolic.svg',
    'hicolor/scalable/actions/system-monitoring-center-system-symbolic.svg',
    'hicolor/scalable/actions/system-monitoring-center-temperature-symbolic.svg',
    'hicolor/scalable/actions/system-monitoring-center-user-symbolic.svg',
    'hicolor/scalable/actions/system-monitoring-center-voltage-symbolic.svg',
    ],
    install_dir: join_paths(pkgdatadir, 'icons', scalable_actions_theme_dir)
)
