pkgdatadir = join_paths(get_option('prefix'), get_option('datadir'), meson.project_name())

application_id = 'io.github.hakandundar34coding.system-monitoring-center'

scalable_apps_dir = join_paths('hicolor', 'scalable', 'apps')
install_data([
    'hicolor/scalable/apps/io.github.hakandundar34coding.system-monitoring-center.svg',
    ],
    install_dir: join_paths(get_option('datadir'), 'icons', scalable_apps_dir)
)

scalable_apps_theme_dir = join_paths('hicolor', 'scalable', 'apps')
install_data([
    'hicolor/scalable/apps/system-monitoring-center.png',
    ],
    install_dir: join_paths(pkgdatadir, 'icons', scalable_apps_theme_dir)
)

scalable_actions_theme_dir = join_paths('hicolor', 'scalable', 'actions', 'white')
install_data([
    'hicolor/scalable/actions/white/smc-cpu.png',
    'hicolor/scalable/actions/white/smc-customizations.png',
    'hicolor/scalable/actions/white/smc-disk.png',
    'hicolor/scalable/actions/white/smc-fan.png',
    'hicolor/scalable/actions/white/smc-gpu.png',
    'hicolor/scalable/actions/white/smc-info-about.png',
    'hicolor/scalable/actions/white/smc-menu.png',
    'hicolor/scalable/actions/white/smc-network.png',
    'hicolor/scalable/actions/white/smc-performance.png',
    'hicolor/scalable/actions/white/smc-process.png',
    'hicolor/scalable/actions/white/smc-process-row.png',
    'hicolor/scalable/actions/white/smc-ram.png',
    'hicolor/scalable/actions/white/smc-reload.png',
    'hicolor/scalable/actions/white/smc-search.png',
    'hicolor/scalable/actions/white/smc-service.png',
    'hicolor/scalable/actions/white/smc-service-row.png',
    'hicolor/scalable/actions/white/smc-system.png',
    'hicolor/scalable/actions/white/smc-temperature.png',
    'hicolor/scalable/actions/white/smc-user.png',
    'hicolor/scalable/actions/white/smc-voltage.png',
    ],
    install_dir: join_paths(pkgdatadir, 'icons', scalable_actions_theme_dir)
)

scalable_actions_theme_dir = join_paths('hicolor', 'scalable', 'actions', 'dark')
install_data([
    'hicolor/scalable/actions/dark/smc-cpu.png',
    'hicolor/scalable/actions/dark/smc-customizations.png',
    'hicolor/scalable/actions/dark/smc-disk.png',
    'hicolor/scalable/actions/dark/smc-fan.png',
    'hicolor/scalable/actions/dark/smc-gpu.png',
    'hicolor/scalable/actions/dark/smc-info-about.png',
    'hicolor/scalable/actions/dark/smc-menu.png',
    'hicolor/scalable/actions/dark/smc-network.png',
    'hicolor/scalable/actions/dark/smc-performance.png',
    'hicolor/scalable/actions/dark/smc-process.png',
    'hicolor/scalable/actions/dark/smc-process-row.png',
    'hicolor/scalable/actions/dark/smc-ram.png',
    'hicolor/scalable/actions/dark/smc-reload.png',
    'hicolor/scalable/actions/dark/smc-search.png',
    'hicolor/scalable/actions/dark/smc-service.png',
    'hicolor/scalable/actions/dark/smc-service-row.png',
    'hicolor/scalable/actions/dark/smc-system.png',
    'hicolor/scalable/actions/dark/smc-temperature.png',
    'hicolor/scalable/actions/dark/smc-user.png',
    'hicolor/scalable/actions/dark/smc-voltage.png',
    ],
    install_dir: join_paths(pkgdatadir, 'icons', scalable_actions_theme_dir)
)
